--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -2,30 +2,22 @@
 
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/all.css' %}" />
-<div style="background-color: black; position: absolute; bottom: 100; width: 100vw;" class = " footer text-light navbar-fixed-bottom my-footer">
+<div style="background-color: black; position: absolute; bottom: 100; width: 100vw;" class = "pt-5 footer text-light navbar-fixed-bottom my-footer">
 
 
 
 	
-	
+	<!-- <input class="text-gray homePageNewsLetterInput"  type="email" placeholder="Enter your email"> -->
 
 		<section class="container footerAllItems">
 
 			<a class="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px;" src="{% static 'images/HS.png' %}" alt="Online Cushion Store"></a>
-
-
-
 			<div class="links">
-
 			 <a class="link" href="#">Home</a>
 			 <a class="link" href="#">About</a>
 			 <a class="link" href="#">What We Do</a>
 
 			</div>
-
-			
-			
-
 		</section>
 				<div class="copyright container">
 
