--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -145,6 +145,14 @@ data-show-facepile="false"
 
 {%endcomment%}
 
+
+<div id="dropdown" class="container-fluid bg-dark">
+
+    hello
+
+
+</div>
+
 <div class="Outer container-md">
 
 
@@ -184,12 +192,11 @@ data-show-facepile="false"
     <!--======================================================== FACEBOOK SECTION ======================================================== -->
 <h1 class="facebookHeaderText">RECOMMENDED PAGES</h1>
     <div class="facebookSection">
-        <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-width="300" data-height="" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/facebook">Facebook</a></blockquote></div>
-
+        <div class="fb-page" data-href="https://www.facebook.com/officialpastorkumuyi/" data-tabs="timeline" data-width="300" data-height="" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/officialpastorkumuyi/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/officialpastorkumuyi/">PASTOR W F KUMUYI</a></blockquote></div>          </section>
     </section>
 
 <!--======================================================== WHAT WE DO SECTION ======================================================== -->
-<section class="container homePageWhatSection" id="container-tablet-WhatWeDo">
+<section class=" homePageWhatSection" id="container-tablet-WhatWeDo">
 
     <h1 class=" homePageWhatH1">WHAT WE DO</h1>
 
