--- a/website/templates/website/post.html
+++ b/website/templates/website/post.html
@@ -38,7 +38,8 @@
                 <div class="labelContainer" >
                 <p class="forEachRowHomePageLabelstMobile">{{post.author}}</p>
               <p class="forEachRowHomePageLabelstMobile">{{post.created|date:'M d, Y'}}</p>
-              <p class="forEachRowHomePageLabelstMobile forEachRowHomePageMinuteRead">{{post.read_time }} MIN READ</p>
+              <p style="opacity: 20%;" class="forEachRowHomePageLabelstMobile forEachRowHomePageMinuteRead">{{post.read_time }} MIN READ</p>
+              <p style="opacity: 30%;" class="forEachRowHomePageLabelstMobile"><i class="fas fa-eye"></i> {{post.view_count }}</p>
             </div>
         </div>
     </div>
@@ -77,12 +78,10 @@
           <!--======================================================== FACEBOOK SECTION ======================================================== -->
       <h1 class="facebookHeaderText">RECOMMENDED PAGE</h1>
           <div class="facebookSection">
-              <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-width="300" data-height="" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/facebook">Facebook</a></blockquote></div>
-      
-          </section>
+            <div class="fb-page" data-lazy="true" data-href="https://www.facebook.com/officialpastorkumuyi/" data-tabs="timeline" data-width="300" data-height="" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/officialpastorkumuyi/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/officialpastorkumuyi/">PASTOR W F KUMUYI</a></blockquote></div>          </section>
       
       <!--======================================================== WHAT WE DO SECTION ======================================================== -->
-      <section class="container homePageWhatSection" id="container-tablet-WhatWeDo">
+      <section class=" homePageWhatSection" id="container-tablet-WhatWeDo">
       
           <h1 class=" homePageWhatH1">WHAT WE DO</h1>
       
