--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -28,6 +28,7 @@
       </div>
   
   {% include 'footer.html' %}
+  <script src="{% static 'Javascript/script.js' %}"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="XYmdf9N7"></script>
