--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -2,5 +2,12 @@
 <header>
     <div style="text-align: center;">
        <a style=""  id="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px;" src="{% static 'images/HS.png' %}" alt="Online Cushion Store"></a>
+   
+   
     </div>
+    </div>
+
+  
+
+        
 </header>
