--- a/website/templates/website/post.html
+++ b/website/templates/website/post.html
@@ -32,14 +32,29 @@
 
             <div class="homePageFirstSection2Inner ">
                 <p class="forEachRowHomePageCategorytMobile"><a style="list-style-type: none; text-decoration: none;"  href="{%url 'website:category_detail' post.category.slug%}" class=" text-dark">{{post.category}}</a></p>
+                {%if new %} 
+               <br>
+                <span style=" font-size: 11px; background-color: red !important;" class=" badge badge-pill badge-danger ">New</span>
+                <span style=" font-size: 11px; color: black; background-color: rgb(255, 217, 0) !important;" class=" badge badge-pill badge-alert ">Popular</span>
 
-                <h4 style="text-transform:capitalize ;" class="forEachRowHomePageTextHeaderMobile text-dark"> {{post.title}} </h4>
+                {%else%}
+                {%endif%}
+                <h4 style="text-transform:capitalize ;" class="forEachRowHomePageTextHeaderMobile text-dark"> {{post.title}}
+                 
+                </h4>
+                
+               
                 <br>
                 <div class="labelContainer" >
                 <p class="forEachRowHomePageLabelstMobile">{{post.author}}</p>
               <p class="forEachRowHomePageLabelstMobile">{{post.created|date:'M d, Y'}}</p>
+             
               <p style="opacity: 20%;" class="forEachRowHomePageLabelstMobile forEachRowHomePageMinuteRead">{{post.read_time }} MIN READ</p>
+             
               <p style="opacity: 30%;" class="forEachRowHomePageLabelstMobile"><i class="fas fa-eye"></i> {{post.view_count }}</p>
+      
+              
+
             </div>
         </div>
     </div>
@@ -78,7 +93,7 @@
           <!--======================================================== FACEBOOK SECTION ======================================================== -->
       <h1 class="facebookHeaderText">RECOMMENDED PAGE</h1>
           <div class="facebookSection">
-            <div class="fb-page" data-lazy="true" data-href="https://www.facebook.com/officialpastorkumuyi/" data-tabs="timeline" data-width="300" data-height="" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/officialpastorkumuyi/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/officialpastorkumuyi/">PASTOR W F KUMUYI</a></blockquote></div>          </section>
+            <iframe src="https://www.facebook.com/plugins/group.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Fdeeperlifebiblechurchsingles&width=300&show_social_context=true&show_metadata=true&appId=148660960575291&height=352" width="300" height="352" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>    </section>
       
       <!--======================================================== WHAT WE DO SECTION ======================================================== -->
       <section class=" homePageWhatSection" id="container-tablet-WhatWeDo">
