--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -1,13 +1,183 @@
 {% load static %}
-<header>
-    <div style="text-align: center;">
+<link rel="stylesheet" href="{% static 'css/all.css' %}">
+
+<style>
+
+
+
+
+@media only screen and (max-width: 765px) {
+
+.whole{
+
+
+
+display: none !important;
+}
+
+}
+@media only screen and (max-width: 991px) {
+
+    .mediasFacebook{
+            display: none;
+
+    }
+
+    .mediasTwitter{
+
+        display: none;
+    }
+
+    .whole{
+
+display: none !important;
+}
+
+}
+
+@media only screen and (max-width: 1259px) and (min-width: 992px) {
+
+    .mediasFacebook{
+
+font-size: 22px; 
+position: absolute !important;
+ margin-left: 19.3vw;  
+ margin-top: 4.7vh;
+}
+
+.mediasTwitter{
+font-size: 22px; 
+position: absolute !important;
+margin-left: 22vw; 
+margin-top: 4.7vh;
+}
+}
+
+@media only screen and (max-width: 1374px) and (min-width: 1260px) {
+
+    .mediasFacebook{
+
+font-size: 22px; 
+position: absolute !important;
+ margin-left: 19.3vw;  
+ margin-top: 4.7vh;
+}
+
+.mediasTwitter{
+font-size: 22px; 
+position: absolute !important;
+margin-left: 21.4vw; 
+margin-top: 4.7vh;
+}
+
+}
+@media only screen and (max-width: 1600px) and (min-width: 1375px){
+
+    .mediasFacebook{
+
+font-size: 22px; 
+position: absolute !important;
+ margin-left: 19.3vw;  
+ margin-top: 4.7vh;
+}
+
+.mediasTwitter{
+font-size: 22px; 
+position: absolute !important;
+margin-left: 21.1vw; 
+margin-top: 4.7vh;
+}
+
+
+}
+@media only screen and (min-width: 1600px) and (max-width: 1699px) {
+
+
+    .mediasFacebook{
+
+font-size: 22px; 
+position: absolute !important;
+ margin-left: 19.3vw;  
+ margin-top: 4.7vh;
+}
+
+.mediasTwitter{
+font-size: 22px; 
+position: absolute !important;
+margin-left: 21.0vw; 
+margin-top: 4.7vh;
+}
+
+}
+@media only screen and (min-width: 1700px) {
+
+    .mediasFacebook{
+
+font-size: 22px; 
+position: absolute !important;
+ margin-left: 19.3vw;  
+ margin-top: 4.7vh;
+}
+
+.mediasTwitter{
+font-size: 22px; 
+position: absolute !important;
+margin-left: 20.7vw; 
+margin-top: 4.7vh;
+}
+
+}
+
+.mediasFacebook{
+
+    padding-top: 1.0vh;
+    transition: 0.1s ease-in-out;
+}
+.mediasTwitter{
+
+    padding-top: 1.1vh;
+    transition: 0.1s ease-in-out;
+}
+
+.buttonHeader{
+
+     
+}
+.mediasTwitter:hover{
+
+    color: red !important;
+}
+.mediasFacebook:hover{
+    color: red !important;
+}
+
+
+
+
+</style>
+
+<header class="bg-dark whole">
+
+   <span><a href="https://www.facebook.com/groups/deeperlifebiblechurchsingles"><i style="" class="mediasFacebook fab fa-facebook text-light"></i></a>
+    <a href="https://twitter.com/dclmhq"> <i style="" class="mediasTwitter fab fa-twitter-square text-light"></i></a></span> 
+   
+   
+
+    <button class="buttonHeader btn btn-light rounded-0" style="font-size: 10px; width: 100px; height: 25px; position: absolute;  margin-left: 74vw; margin-top: 4.9vh;">
+
+        SUBSCRIBE
+    </button>
+    <div style="text-align: center; " >
        <a style=""  id="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px;" src="{% static 'images/HS.png' %}" alt="Online Cushion Store"></a>
    
    
     </div>
     </div>
 
-  
+
 
         
 </header>
+
+
+
