--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,31 +1,57 @@
 {% load static %}
 
+<style>
+  .t:hover{
 
-<nav  id="navbarMain" class="navbar navbar-expand-lg border-top border-bottom">
+    color: red !important;
+   
+
+  }
+
+  .t{
+
+    color: white !important; 
+    font-family: Helvetica !important;
+    font-size: 13px !important; 
+  }
+  #searchIconMobile{
+
+    transition: 0.1s ease-in-out;
+  }
+
+  #searchIconMobile:hover{
+
+    cursor: pointer;
+    opacity: 20%;
+    
+  }
+</style>
+<nav   style=" background-color: #c92020;"  id="navbarMain" class="navbar navbar-expand-lg  border-bottom bg-dark">
+<!-- <nav   style=" background-color: #c92020;"  id="navbarMain" class="navbar navbar-expand-lg  border-bottom "> -->
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fas fa-bars text-dark"></i>
+      <i class="fas fa-bars text-light"></i>
     </button>
     <a id="logoNavbar" class="navbar-brand mx-auto mr-3" href="{% url 'website:home' %}"> <img class=" mx-auto" style="width: 170px;" src="{% static 'images/HS.png' %}" alt="Online Cushion Store"></a>
     <a class="navbar-brand" href="#"><img src=""></a>
-    <i  id="searchIconMobile" class="fas fa-search text-dark"></i>
+  
+
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul id="navbarContent" class="navbar-nav mx-auto ">
-  
+        
+
 
         {%for link in links%}
        
-        <li class="nav-item navers">
-          <a href="{% url 'website:category_detail' link.slug %}"   class=" t active" aria-current="page" >{{link.name}}</a>
-        </li>
+        <li class="nav-item text-center text-white navers">
+   <a style="color: white;" href="{% url 'website:category_detail' link.slug %}"   class="text-white t " aria-current="page" >{{link.name}}</a> 
+        </li> 
 
         
         {%endfor%}
 
-       
-      </ul>
-      
     </div>
+      <i style="margin-right: 3vw;"  id="searchIconMobile" class="fas fa-search text-light"></i>
   </div>
 </nav>
 
